tests/NormalTests/paczka1/small_fuzzy/84090190.err
Error in line 9: tRAKZs S951 14,4
Error in line 6: RVa S406 63,0
